docs/0.17/_sources/api/gammapy.irf.EDispMap.rst.txt
EDispMap
========

.. currentmodule:: gammapy.irf

.. autoclass:: EDispMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EDispMap.edisp_map

   .. rubric:: Methods Summary

   .. autosummary::

      ~EDispMap.copy
      ~EDispMap.cutout
      ~EDispMap.from_diagonal_response
      ~EDispMap.from_geom
      ~EDispMap.from_hdulist
      ~EDispMap.get_edisp_kernel
      ~EDispMap.read
      ~EDispMap.sample_coord
      ~EDispMap.stack
      ~EDispMap.to_edisp_kernel_map
      ~EDispMap.to_hdulist
      ~EDispMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: edisp_map

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: cutout
   .. automethod:: from_diagonal_response
   .. automethod:: from_geom
   .. automethod:: from_hdulist
   .. automethod:: get_edisp_kernel
   .. automethod:: read
   .. automethod:: sample_coord
   .. automethod:: stack
   .. automethod:: to_edisp_kernel_map
   .. automethod:: to_hdulist
   .. automethod:: write
